<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/baseline_search_black_18dp"
            android:title="@string/title_search"/>

    <item
            android:id="@+id/navigation_favorites"
            android:icon="@drawable/baseline_favorite_black_18dp"
            android:title="@string/title_favorites"/>
    <item
            android:id="@+id/navigation_order"
            android:icon="@drawable/baseline_list_alt_black_18dp"
            android:title="@string/title_order"/>
    <item
            android:id="@+id/navigation_mine"
            android:icon="@drawable/baseline_person_black_18dp"
            android:title="@string/title_mine"/>

</menu>
